# taikyoku_shogi

./: .gitignore  AGENTS.md  Cargo.toml  FREE_EAGLE_REPORT.md  README.md  TASK_5_ANALYSIS.md  TEST_ENVIRONMENT_ESTIMATE.md  TEST_ENVIRONMENT_USAGE.md  install_clippy.sh
.cursor/rules/: agent-workflow.mdc
models/: ab-seed-noisy.json  ab-seed.json
src/: alphabeta_player.rs  attack_utils.rs  board.rs  debug_tool.rs  eval.rs  game_history.rs  game_state.rs  lib.rs  main.rs  minimal_intelligence_player.rs  move_simulation.rs  path_utils.rs  piece.rs  player.rs  position.rs  random_player.rs  royal_capture_player.rs  search.rs  server.rs  session_api.rs  tengu_attack.rs  uci.rs  zobrist.rs
src/movement/: config.rs  direction.rs  generator.rs  mod.rs  types.rs
web/: index.html  package-lock.json  package.json  svelte.config.js  vite.config.js
web/src/: App.svelte  app.css  main.js
web/src/lib/: Board.svelte  SearchPanel.svelte  api.js
