[package]
name = "taikyoku_shogi"
version = "0.1.0"
edition = "2021"
default-run = "taikyoku_shogi"

[[bin]]
name = "taikyoku_shogi"
path = "src/main.rs"

[dependencies]
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
